--- a/IMPLS.yml
+++ b/IMPLS.yml
@@ -6,6 +6,7 @@ IMPL:
   - {IMPL: basic, basic_MODE: cbm, NO_SELF_HOST: 1}  # step4 OOM
   - {IMPL: basic, basic_MODE: qbasic, NO_SELF_HOST: 1}  # step4 OOM
   - {IMPL: bbc-basic}
+  - {IMPL: bun}
   - {IMPL: c}
   - {IMPL: c.2}
   - {IMPL: cpp}
