--- a/impls/tsbun/.vscode/launch.json
+++ b/impls/tsbun/.vscode/launch.json
@@ -7,7 +7,7 @@
       "name": "Debug Bun",
 
       // The path to a JavaScript or TypeScript file to run.
-      "program": "step4_if_fn_do.ts",
+      "program": "step8_macros.ts",
 
       // The arguments to pass to the program, if any.
       "args": [],
