--- a/Makefile.impls
+++ b/Makefile.impls
@@ -35,7 +35,7 @@ wasm_MODE = wasmtime
 #
 
 IMPLS = ada ada.2 awk bash basic bbc-basic bun c c.2 chuck clojure coffee common-lisp cpp crystal cs d dart \
-	deno elisp elixir elm erlang es6 factor fantom fennel forth fsharp go groovy gnu-smalltalk \
+	deno elisp elixir elixir2 elm erlang es6 factor fantom fennel forth fsharp go groovy gnu-smalltalk \
 	guile haskell haxe hy io janet java java-truffle js jq julia kotlin livescript logo lua make mal \
 	matlab miniMAL nasm nim objc objpascal ocaml perl perl6 php picolisp pike plpgsql \
 	plsql powershell prolog ps purs python python.2 r racket rexx rpython ruby ruby.2 rust scala scheme skew sml \
@@ -125,6 +125,7 @@ dart_STEP_TO_PROG =          impls/dart/$($(1)).dart
 deno_STEP_TO_PROG =          impls/deno/$($(1)).ts
 elisp_STEP_TO_PROG =         impls/elisp/$($(1)).el
 elixir_STEP_TO_PROG =        impls/elixir/lib/mix/tasks/$($(1)).ex
+elixir2_STEP_TO_PROG =        impls/elixir2/lib/mix/tasks/$($(1)).ex
 elm_STEP_TO_PROG =           impls/elm/$($(1)).js
 erlang_STEP_TO_PROG =        impls/erlang/$($(1))
 es6_STEP_TO_PROG =           impls/es6/$($(1)).mjs
